--- a/index.html
+++ b/index.html
@@ -23,11 +23,81 @@
   </head>
   <body>
     <div class="page">
-      Testing...
-      <!-- otros elementos -->
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Logo encabezado"
+            class="nav__logo"
+          />
+          <ul class="nav__links">
+            <li>
+              <a href="#anclaje-recipes" class="nav__link">Recetas</a>
+            </li>
+            <li>
+              <a href="#" class="nav__link">Reservar una mesa</a>
+            </li>
+            <li>
+              <a href="#" class="nav__link">Menú</a>
+            </li>
+            <li>
+              <a href="#" class="nav__link">Contactos</a>
+            </li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span class="span--accent">Café de especialidad</span>en Triple Peaks
+        </h1>
+        <p class="header__description">
+          ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
+          para darte energía y una vibra acogedora que motivarán tu creatividad.
+        </p>
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="Illustration 'inside_coffee_shop'"
+          class="header__image"
+        />
+        <div class="header__footer">
+          <p class="header__horario">
+            Horario: <br />
+            Lunes a Viernes (de 10:00 a 19:00) <br />
+            Sábados y Domingos (de 11:00 a 18:00)
+          </p>
+          <p class="header__address">
+            Avenida del Éxito 200, Ciudad Triple Peaks
+          </p>
+        </div>
+      </header>
       <main class="content">
-        <section class="recipes"></section>
+        <section class="recipes" id="anclaje-recipes">
+          <h2 class="recipes__title">Recetas</h2>
+          <p class="recipes__subtitle">
+            Echa un vistazo a algunas de nuestras recetas para que elabores tu
+            propio café.
+          </p>
+          <div class="recipes__videos">
+            <div class="recipes__video-item">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=hp79dmQHrChxkFBr"
+              ></iframe>
+              <p class="recipes__video-caption">
+                Receta en
+                Aeropress&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;~5
+                min
+              </p>
+            </div>
+            <div class="recipes__video-item">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=tl1r58kawp-1HK84"
+              ></iframe>
+              <p class="recipes__video-caption">
+                Receta en cafetera francesa&emsp;&emsp;&emsp;&emsp;&nbsp;~15 min
+              </p>
+            </div>
+          </div>
+        </section>
         <section class="reservation"></section>
         <section class="menu"></section>
         <section class="about"></section>
