--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          <span class="span--accent">Café de especialidad</span>en Triple Peaks
+          <span class="span-accent">Café de especialidad</span>en Triple Peaks
         </h1>
         <p class="header__description">
           ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
