Cambios del proyecto Etapa 2

--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
               <a href="#anclaje-recipes" class="nav__link">Recetas</a>
             </li>
             <li>
-              <a href="#" class="nav__link">Reservar una mesa</a>
+              <a href="#anclaje-reservation" class="nav__link"
+                >Reservar una mesa</a
+              >
             </li>
             <li>
-              <a href="#" class="nav__link">Menú</a>
+              <a href="#anclaje-menu" class="nav__link">Menú</a>
             </li>
             <li>
-              <a href="#" class="nav__link">Contactos</a>
+              <a href="#anclaje-about" class="nav__link">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -98,9 +100,9 @@
             </div>
           </div>
         </section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section class="reservation" id="anclaje-reservation"></section>
+        <section class="menu" id="anclaje-menu"></section>
+        <section class="about" id="anclaje-about"></section>
       </main>
       <footer class="footer"></footer>
     </div>
