--- a/index.html
+++ b/index.html
@@ -103,51 +103,51 @@
         <section class="reservation" id="anclaje-reservation">
           <h2 class="reservation__title">Reservar una mesa</h2>
           <form class="reservation__form">
-            <fieldset class="form__fieldset">
-              <label for="nombre" class="form__label"
+            <fieldset class="form form__fieldset">
+              <label for="nombre" class="form form__label"
                 >Nombre *
                 <input
-                  class="form__input"
+                  class="form form__input"
                   type="text"
                   placeholder="Nombre Apellido"
                   id="nombre"
                   required
                 />
               </label>
-              <label for="number" class="form__label"
+              <label for="number" class="form form__label"
                 >Numero de comensales *
                 <input
-                  class="form__input"
+                  class="form form__input"
                   type="number"
                   placeholder="1-8"
                   id="number"
                   required
                 />
               </label>
-              <label for="datetime-local" class="form__label"
+              <label for="datetime-local" class="form form__label"
                 >Fecha y Hora *
                 <input
-                  class="form__input"
+                  class="form form__input"
                   type="datetime-local"
                   id="datetime-local"
                   required
                 />
               </label>
-              <label for="email" class="form__label"
+              <label for="email" class="form form__label"
                 >Tu correo electrónico *
                 <input
-                  class="form__input"
+                  class="form form__input"
                   type="email"
                   placeholder="email@email.com"
                   id="email"
                   required
                 />
               </label>
-              <button class="form__button">Reservar una mesa</button>
+              <button class="form form__button">Reservar una mesa</button>
               <label class="form__label form__label_el_checkbox" for="checkbox">
-                <input class="form__checkbox" type="checkbox" />
-                <span class="form__pseudo-checkbox"></span>Acepto los términos
-                de uso</label
+                <input class="form form__checkbox" type="checkbox" />
+                <span class="form form__pseudo-checkbox" id="checkbox"></span
+                >Acepto los términos de uso</label
               >
             </fieldset>
           </form>
