Cambios del proyecto Etapa 3

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <section class="reservation" id="anclaje-reservation">
           <h2 class="reservation__title">Reservar una mesa</h2>
           <form class="reservation__form">
-            <fieldset class="form form__fieldset">
+            <fieldset class="form__fieldset form__fieldset_ctrl">
               <label for="nombre" class="form form__label"
                 >Nombre *
                 <input
@@ -144,10 +144,10 @@
                 />
               </label>
               <button class="form form__button">Reservar una mesa</button>
-              <label class="form__label form__label_el_checkbox" for="checkbox">
+              <label class="form__label form__label_el_checkbox">
                 <input class="form form__checkbox" type="checkbox" />
-                <span class="form form__pseudo-checkbox" id="checkbox"></span
-                >Acepto los términos de uso</label
+                <span class="form form__pseudo-checkbox"></span>Acepto los
+                términos de uso</label
               >
             </fieldset>
           </form>
