--- a/index.html
+++ b/index.html
@@ -103,51 +103,70 @@
         <section class="reservation" id="anclaje-reservation">
           <h2 class="reservation__title">Reservar una mesa</h2>
           <form class="reservation__form">
-            <fieldset class="form__fieldset form__fieldset_ctrl">
-              <label for="nombre" class="form form__label"
+            <fieldset class="reservation__form reservation__form_fieldset">
+              <label
+                for="nombre"
+                class="reservation__form_fieldset reservation__form_fieldset_label"
                 >Nombre *
                 <input
-                  class="form form__input"
+                  class="reservation__form_fieldset reservation__form_fieldset_input"
                   type="text"
                   placeholder="Nombre Apellido"
                   id="nombre"
                   required
                 />
               </label>
-              <label for="number" class="form form__label"
+              <label
+                for="number"
+                class="reservation__form_fieldset reservation__form_fieldset_label"
                 >Numero de comensales *
                 <input
-                  class="form form__input"
+                  class="reservation__form_fieldset reservation__form_fieldset_input"
                   type="number"
                   placeholder="1-8"
                   id="number"
                   required
                 />
               </label>
-              <label for="datetime-local" class="form form__label"
+              <label
+                for="datetime-local"
+                class="reservation__form_fieldset reservation__form_fieldset_label"
                 >Fecha y Hora *
                 <input
-                  class="form form__input"
+                  class="reservation__form_fieldset reservation__form_fieldset_input"
                   type="datetime-local"
                   id="datetime-local"
                   required
                 />
               </label>
-              <label for="email" class="form form__label"
+              <label
+                for="email"
+                class="reservation__form_fieldset reservation__form_fieldset_label"
                 >Tu correo electrónico *
                 <input
-                  class="form form__input"
+                  class="reservation__form_fieldset reservation__form_fieldset_input"
                   type="email"
                   placeholder="email@email.com"
                   id="email"
                   required
                 />
               </label>
-              <button class="form form__button">Reservar una mesa</button>
-              <label class="form__label form__label_el_checkbox">
-                <input class="form form__checkbox" type="checkbox" />
-                <span class="form form__pseudo-checkbox"></span>Acepto los
-                términos de uso</label
+              <button
+                class="reservation__form_fieldset reservation__form_fieldset_button"
+              >
+                Reservar una mesa
+              </button>
+              <label
+                class="reservation__form_fieldset reservation__form_fieldset_label-checkbox"
+              >
+                <input
+                  class="reservation__form_fieldset reservation__form_fieldset_checkbox"
+                  type="checkbox"
+                />
+                <span
+                  class="reservation__form_fieldset reservation__form_fieldset_checkbox-pseudo"
+                ></span
+                >Acepto los términos de uso</label
               >
             </fieldset>
           </form>
