--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </section>
         <section class="reservation" id="anclaje-reservation">
           <h2 class="reservation__title">Reservar una mesa</h2>
-          <form class="reservation__form">
+          <form class="form">
             <fieldset class="form__fieldset">
               <label for="nombre" class="form__label"
                 >Nombre *
