--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          <span class="header__title_span-accent">Café de especialidad</span>en
-          Triple Peaks
+          <span class="span-accent">Café de especialidad</span>en Triple Peaks
         </h1>
         <p class="header__description">
           ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
